# dr_checker

./: .gitignore  README.md
docker/: Dockerfile  build_and_push.sh  docker-compose.yml  install.sh  install_docker.sh
docker/dockershare/: README.md
docker/main/: Dockerfile  install.sh
docker/v_client/: Dockerfile  install.sh
docker/v_server/: Dockerfile  install.sh
docs/: docker.md  faq.md  postprocessing.md  standalone.md
helper_scripts/: setup_drchecker.py
helper_scripts/pp_scripts/: pp_jsons.py
helper_scripts/runner_scripts/: run_all.py
helper_scripts/runner_scripts/components/: __init__.py  base_component.py  entry_point_identifier.py  llvm_build.py  parse_headers.py  soundy_analysis_runner.py  warnings_stats.py
llvm_analysis/: build.sh
llvm_analysis/AnalysisHelpers/: build.sh
llvm_analysis/AnalysisHelpers/Dr_linker/: .gdb_history
llvm_analysis/AnalysisHelpers/Dr_linker/src/: main.cpp
llvm_analysis/AnalysisHelpers/EntryPointIdentifier/: .gdb_history
llvm_analysis/AnalysisHelpers/EntryPointIdentifier/src/: main.cpp
llvm_analysis/MainAnalysisPasses/: CMakeLists.txt  build.sh
llvm_analysis/MainAnalysisPasses/Customizations/: CMakeLists.txt
llvm_analysis/MainAnalysisPasses/Customizations/include/: FunctionChecker.h
llvm_analysis/MainAnalysisPasses/LinuxKernelCustomizations/: CMakeLists.txt
llvm_analysis/MainAnalysisPasses/RangeAnalysis/: CMakeLists.txt
llvm_analysis/MainAnalysisPasses/SoundyAliasAnalysis/: CMakeLists.txt
llvm_analysis/MainAnalysisPasses/SoundyAliasAnalysis/include/: AliasAnalysisVisitor.h  AliasFuncHandlerCallback.h  AliasObject.h  GlobalVisitor.h  ModuleState.h  PointsToUtils.h  TaintAnalysisVisitor.h  TaintInfo.h  TaintUtils.h  VisitorCallback.h
llvm_analysis/MainAnalysisPasses/SoundyAliasAnalysis/include/bug_detectors/: BugDetectorDriver.h  GlobalVariableRaceDetector.h  ImproperTaintedDataUseDetector.h  IntegerOverflowDetector.h  InvalidCastDetector.h  KernelUninitMemoryLeakDetector.h  TaintedLoopBoundDetector.h  TaintedPointerDereference.h  TaintedSizeDetector.h
llvm_analysis/MainAnalysisPasses/SoundyAliasAnalysis/include/bug_detectors/warnings/: ImproperTaintedDataUseWarning.h  InvalidCastWarning.h  KernelUninitMemoryLeakWarning.h  TaintedSizeWarning.h  VulnerabilityWarning.h
llvm_analysis/MainAnalysisPasses/SoundyAliasAnalysis/src/: AliasAnalysisVisitor.cpp  AliasFuncHandlerCallback.cpp  GlobalVisitor.cpp  PointsToUtils.cpp  SoundyAliasAnalysis.cpp  TaintAnalysisVisitor.cpp  TaintUtils.cpp
llvm_analysis/MainAnalysisPasses/SoundyAliasAnalysis/src/bug_detectors/: BugDetectorDriver.cpp  GlobalVariableRaceDetector.cpp  ImproperTaintedDataUseDetector.cpp  IntegerOverflowDetector.cpp  InvalidCastDetector.cpp  KernelUninitMemoryLeakDetector.cpp  TaintedLoopBoundDetector.cpp  TaintedPointerDereference.cpp  TaintedSizeDetector.cpp
llvm_analysis/MainAnalysisPasses/SoundyAliasAnalysis/src/bug_detectors/warnings/: ImproperTaintedDataUseWarning.cpp  InvalidCastWarning.cpp  KernelUninitMemoryLeakWarning.cpp  TaintedSizeWarning.cpp  VulnerabilityWarning.cpp
llvm_analysis/MainAnalysisPasses/Utils/: CMakeLists.txt
visualizer/: README.md  Readme.md
visualizer/client/: .eslintrc.json  .gitignore  README.md  package-lock.json  package.json
visualizer/client/public/: index.html  manifest.json
visualizer/client/src/: index.js
visualizer/server/: .gitignore  app.py  config.py  requirements.txt  utils.py
(+22 files in other folders)
